--- a/demo-springcloud-all/S4-l05-springcloud-eureka-zuul/src/main/resources/application.yml
+++ b/demo-springcloud-all/S4-l05-springcloud-eureka-zuul/src/main/resources/application.yml
@@ -1,9 +1,16 @@
 server:
-  port: 8899
- 
-            
-              
+  port: 9000
+spring:
+  application:
+    name: eureka-config-zuul
+  cloud:
+    discovery:
+      enabled: true
+      service-id: eureka-config-server
+    profile: zuul
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka
+      
