--- a/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
+++ b/demo-springcloud-all/springcloud-jdbctemplate/src/main/resources/datasource.properties
@@ -7,3 +7,16 @@ spring.datasource.secondary.jdbc-url=jdbc:mysql://lenovodb:3306/?useUnicode=true
 spring.datasource.secondary.username=myuser
 spring.datasource.secondary.password=mypassword
 spring.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
+
+
+
+# Hikari will use the above plus the following to setup connection pooling
+spring.datasource.primary.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.primary.hikari.minimum-idle=5
+spring.datasource.primary.hikari.maximum-pool-size=15
+spring.datasource.primary.hikari.auto-commit=true
+spring.datasource.primary.hikari.idle-timeout=30000
+spring.datasource.primary.hikari.pool-name=DatebookHikariCP
+spring.datasource.primary.hikari.max-lifetime=1800000
+spring.datasource.primary.hikari.connection-timeout=30000
+spring.datasource.primary.hikari.connection-test-query=SELECT 1
