--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
-      <scope>test</scope>
+      <!-- <scope>test</scope> -->
     </dependency>
     
     <!-- httpclient 4 -->
@@ -158,7 +158,6 @@
    	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
-		<scope>runtime</scope>
 		<version>5.1.6</version>
 	</dependency>
 	
@@ -166,7 +165,6 @@
 	<dependency>
 		<groupId>c3p0</groupId>
 		<artifactId>c3p0</artifactId>
-		<scope>runtime</scope>
 		<version>0.9.1.2</version>
 	</dependency>
     
@@ -348,7 +346,7 @@
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
-        <scope>test</scope>
+        <!-- <scope>test</scope> -->
         <version>${springframework.version}</version>
     </dependency>
     <dependency>
@@ -534,6 +532,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		
+		<dependency>
+		  <groupId>fakepath</groupId>
+		  <artifactId>fastdfs-client-java</artifactId>
+		  <version>1.27</version>
+		</dependency>	
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
