--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -109,6 +109,11 @@
 	    <artifactId>commons-math3</artifactId>
 	</dependency>
 	
+ 	<dependency>
+	 <groupId>org.mybatis</groupId>
+	 <artifactId>mybatis</artifactId>
+    </dependency>     
+    
     
     <!-- apache oauth2.0 -->
     <dependency>
