--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -88,6 +88,13 @@
 	   <version>5.2</version>
 	  </dependency> -->
     
+    <!-- mongo -->
+	<dependency>
+	    <groupId>org.mongodb</groupId>
+	    <artifactId>mongo-java-driver</artifactId>
+	    <version>2.13.0</version>
+	</dependency>
+    
     
     <!-- mysql -->
    	<dependency>
