--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -94,7 +94,11 @@
 	    <artifactId>mongo-java-driver</artifactId>
 	    <version>2.13.0</version>
 	</dependency>
-    
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-mongodb</artifactId>
+      <version>1.7.2.RELEASE</version>
+    </dependency>       
     
     <!-- mysql -->
    	<dependency>
