--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -594,6 +594,13 @@
         </dependency>
         <!-- log4j end --> 		
 		
+        <!-- csv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.6</version>
+        </dependency>		
+		
          <!-- ########################jdk version######################## -->
 		<!-- <dependency>
 			<groupId>jdk.tools</groupId>
