--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -599,7 +599,32 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>4.6</version>
-        </dependency>		
+        </dependency>	
+        
+        <!-- sftp -->
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-sftp</artifactId>
+            <version>4.3.21.RELEASE</version>
+        </dependency>       
+        
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-file</artifactId>
+            <version>4.3.21.RELEASE</version>
+        </dependency>   
+        
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-stream</artifactId>
+            <version>4.3.21.RELEASE</version>
+        </dependency>     
+
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+            <version>4.3.21.RELEASE</version>
+        </dependency>                             	
 		
          <!-- ########################jdk version######################## -->
 		<!-- <dependency>
