--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@
        <skipTests>true</skipTests>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-       <springframework.version>4.3.18.RELEASE</springframework.version>
+       <!-- <springframework.version>4.3.18.RELEASE</springframework.version> -->
+       <springframework.version>4.3.25.RELEASE</springframework.version>
        <JAVA_HOME>C:\Program Files\Java\jdk1.8.0_51</JAVA_HOME>
        <slf4j.version>1.7.5</slf4j.version>
        <shiro.version>1.2.3</shiro.version>
@@ -464,13 +465,7 @@
 		<version>2.6.1</version>
 	</dependency>
 	
-	<!-- netty -->
-	<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
-	<dependency>
-	    <groupId>io.netty</groupId>
-	    <artifactId>netty-all</artifactId>
-	    <version>4.1.3.Final</version>
-	</dependency>
+
 
       
 			
@@ -635,6 +630,15 @@
 	    	<artifactId>curator-recipes</artifactId>
 	    	<version>3.0.0</version>
 		</dependency>   
+		
+		<!-- netty -->
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-all</artifactId>
+		    <version>4.1.23.Final</version>
+		</dependency>		
+		
 		
          <!-- ########################jdk version######################## -->
 		<!-- <dependency>
