--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -463,6 +463,12 @@
 	<dependency>  
 			<groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-starter-redis</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>log4j-over-slf4j</artifactId>
+				</exclusion>
+			</exclusions>
 	</dependency>  
 	<dependency>  
 			<groupId>org.springframework.session</groupId>  
