--- a/demo-authserver/pom.xml
+++ b/demo-authserver/pom.xml
@@ -51,6 +51,17 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			
+			
+			<dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.1</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			
+			
 		</dependencies>
 
 	</dependencyManagement>
