--- a/demo-authserver/authserver/src/main/resources/application.yml
+++ b/demo-authserver/authserver/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     username: root
     password: p@ssw0rd
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sso?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/oauth2dev?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     type: com.alibaba.druid.pool.DruidDataSource
 
   redis:
-    host: 127.0.0.1
-    port: 6379
+    host: localhost
+    port: 6003
