--- a/demo-authserver/authserver/src/main/resources/application.yml
+++ b/demo-authserver/authserver/src/main/resources/application.yml
@@ -15,5 +15,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
 
   redis:
-    host: localhost
+    host: 10.250.1.21
     port: 6003
+    
+logging:
+   level:
+      root: info
