--- a/demo-authserver/authserver-gateway/src/main/resources/application.yml
+++ b/demo-authserver/authserver-gateway/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
 
   redis:
-    host: localhost
+    host: 10.250.1.21
     port: 6379
 logging:
   level:
