--- a/demo-authserver/sso-portal-password/pom.xml
+++ b/demo-authserver/sso-portal-password/pom.xml
@@ -43,7 +43,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-
+		
+		<dependency>
+		  <groupId>org.learn.common</groupId>
+		  <artifactId>ms-cloud-common</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>		
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
