--- a/demo-authserver/gateway-product-service/pom.xml
+++ b/demo-authserver/gateway-product-service/pom.xml
@@ -30,6 +30,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.8</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-alibaba-nacos-discovery</artifactId>
 		</dependency>
