--- a/demo-authserver/gateway-product-service/src/main/resources/application.yml
+++ b/demo-authserver/gateway-product-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
       druid:
         username: root
-        password: p@ssw0rd
+        password: admin
         jdbcUrl: jdbc:mysql://localhost:3306/oauth2dev?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
         driverClassName: com.mysql.jdbc.Driver
         initialSize: 5
